--- a/_index-v2.html
+++ b/_index-v2.html
@@ -1,12 +1,4 @@
 <!DOCTYPE html>
-<!--
-* WAVE - Sliding Coming Soon Template
-* Build Date: June 2016
-* Last Update: June 2016
-* Author: Madeon08
-* Copyright (C) 2016 Madeon08
-* This is a premium product available exclusively here : http://themeforest.net/user/Madeon08/portfolio
--->
 <html lang="en-us" class="no-js">
 
 	<head>
@@ -79,7 +71,7 @@
 
 								<img src="img/logo.png" alt="" class="brand-logo text-intro opacity-0" />
 							
-								<h1 class="text-intro opacity-0">We're so close</h1>
+								<h1 class="text-intro opacity-0">CloudDogg Computing Services</h1>
 							
 								<p class="text-intro opacity-0">Enjoy a <strong>Very Limited Opportunity</strong> by subscribing to our newsletter.<br>
 									Check out the time remaining on top left, hurry up!
