--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 								<img src="img/logo.png" alt="" class="brand-logo text-intro opacity-0" />
 							
-								<h1 class="text-intro opacity-0">We're so close</h1>
+								<h1 class="text-intro opacity-0">CloudDogg Development Service</h1>
 							
 								<p class="text-intro opacity-0">Enjoy a <strong>Very Limited Opportunity</strong> by subscribing to our newsletter.<br>
 									Check out the time remaining on top left, hurry up!
