--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<!--
-* WAVE - Sliding Coming Soon Template
-* Build Date: June 2016
-* Last Update: June 2016
-* Author: Madeon08
-* Copyright (C) 2016 Madeon08
-* This is a premium product available exclusively here : http://themeforest.net/user/Madeon08/portfolio
--->
 <html lang="en-us" class="no-js">
 
 	<head>
 		<meta charset="utf-8">
-        <title>WAVE - Sliding Coming Soon Template</title>
+        <title>CloudDogg Development Service - Coming Soon</title>
         <meta name="description" content="The description should optimally be between 150-160 characters.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Madeon08">
@@ -40,7 +32,7 @@
     	<!-- Loading overlay -->
 		<div id="loading" class="dark-back">
 			<div class="loading-bar"></div>
-			<span class="loading-text opacity-0">Please wait...</span>
+			<span class="loading-text opacity-0">Loading. Please wait...</span>
 		</div>
 
     	<!-- Informations bar on top of the screen -->
