--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
 
 						            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 								
-										<p>Hi, I'm WAVE and I'm ready to boost your web project by my elegance, exclusive design and animations. I'm ready-to-use, just upload me on your server, add your pictures and edit my texts. Handmade, precisely built with the famous Bootstrap Framework. Salut, je suis WAVE et je suis prêt à booster votre projet web par mon élégance, mon design et mes animations exclusives. Je suis prêt à l'emploi, il suffit de me mettre sur votre serveur.</p>
+										<p>
+											Hi, I'm WAVE and I'm ready to boost your web project by my elegance, exclusive design and animations. I'm ready-to-use, just upload me on your server, add your pictures and edit my texts. Handmade, precisely built with the famous Bootstrap Framework. Salut, je suis WAVE et je suis prêt à booster votre projet web par mon élégance, mon design et mes animations exclusives. Je suis prêt à l'emploi, il suffit de me mettre sur votre serveur.
+										</p>
 
 									</div>
 
@@ -688,7 +690,7 @@
 		<script>
 		$("#countdown")
 			// Year/Month/Day Hour:Minute:Second
-			.countdown("2018/10/24 15:30:30", function(event) {
+			.countdown("2023/04/15 15:30:30", function(event) {
 				$(this).html(
 					event.strftime('%D Days %Hh %Mm %Ss')
 				);
