--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
 							
 								<h1 class="text-intro opacity-0">CloudDogg Development Services</h1>
 							
-								<p class="text-intro opacity-0">Enjoy a <strong>Very Limited Opportunity</strong> by subscribing to our newsletter.<br>
-									Check out the time remaining on top left, hurry up!
+								<p class="text-intro opacity-0">CloudDogg cloud development services can create model-based solutions for businesses to provide greater flexibility and design personalized solutions that meet their particular needs. 
 								</p>
 
 								<a data-dialog="somedialog" class="action-btn trigger text-intro opacity-0">Notify me at Launch!</a>
