--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							
 								<h1 class="text-intro opacity-0">CloudDogg Development Services</h1>
 							
-								<p class="text-intro opacity-0">CloudDogg cloud development services can create model-based solutions for businesses to provide greater flexibility and design personalized solutions that meet their particular needs. 
+								<p class="text-intro opacity-0">CloudDogg cloud development services can create model-based cloud solutions for businesses to provide greater flexibility, resilience, and availability and design personalized solutions that meet the customers' particular use cases. 
 								</p>
 
 								<a data-dialog="somedialog" class="action-btn trigger text-intro opacity-0">Notify me at Launch!</a>
