Services Page Update

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 Our Commitment:At CloudDogg, we are passionate about helping businesses thrive in the ever-evolving digital landscape. Our team of experienced professionals is committed to providing top-notch services that cater to your specific needs. We understand the challenges you face and strive to deliver tailored solutions that drive efficiency, scalability, and success.
 
-Experience the benefits of a trusted and reliable cloud services provider. Contact CloudDogg today to embark on a transformative journey towards scalable, efficient, and innovative cloud solutions for your organization.
+Experience the benefits of a trusted and reliable cloud services provider. Contact CloudDogg today to embark on a transformative journey towards scalable, efficient, and innovative serverless cloud solutions for your organization.
 										</p>
 
 									</div>
@@ -309,9 +309,9 @@ Experience the benefits of a trusted and reliable cloud services provider. Conta
 
 							<div class="container">
 
-								<h2>All new features</h2>
+								<h2>Services</h2>
 
-								<p class="resume">The goal of a startup is to figure out the right thing to build the thing customers want and will pay for as quickly as possible. In other words, the Lean Startup is a new way of looking at the development of innovative new products that emphasizes fast iteration and customer insight, a huge vision, and great ambition, all at the same time.</p>
+								<p class="resume">We understand the challenges you face and strive to deliver tailored solutions that drive efficiency, scalability, and successExperience the benefits of a trusted and reliable cloud services provider. Contact CloudDogg today to embark on a transformative journey towards scalable, efficient, and innovative cloud solutions for your organization.</p>
 
 								<div class="row services">
 
@@ -321,9 +321,9 @@ Experience the benefits of a trusted and reliable cloud services provider. Conta
 
 											<span class="icon"><i class="icon ion-lock-combination"></i></span>
 
-											<h3>High security</h3>
+											<h3>OpenSearch</h3>
 
-											<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis cupidatat proident.</p>
+											<p>Enhance your applications with lightning-fast and accurate search capabilities. CloudDogg specializes in search engines and offers expertise in OpenSearch, enabling you to index and search through vast amounts of data effortlessly. With our assistance, you can unlock the full potential of OpenSearch and provide your users with a seamless search experience.</p>
 
 										</div>
 									</div>
@@ -334,9 +334,9 @@ Experience the benefits of a trusted and reliable cloud services provider. Conta
 
 											<span class="icon icon-clock"><i class="icon ion-android-time"></i></span>
 
-											<h3>From 08:00 to 22:00</h3>
+											<h3>Route 53 Edge Services</h3>
 
-											<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis cupidatat proident.</p>
+											<p>Efficient DNS management is crucial for a seamless online presence. CloudDogg offers expertise in Route 53, AWS's highly available and scalable DNS service. We assist in configuring DNS settings, domain registration, and ensuring the reliability of your web services. Trust us to provide a solid foundation for your online infrastructure with seamless traffic routing and DNS resolution.</p>
 
 										</div>
 									</div>
@@ -351,9 +351,9 @@ Experience the benefits of a trusted and reliable cloud services provider. Conta
 
 											<span class="icon"><i class="icon ion-chatbubbles"></i></span>
 
-											<h3>Friendly support</h3>
+											<h3>DevOps and CI/CD Pipelines</h3>
 
-											<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis cupidatat proident.</p>
+											<p>Streamline your development and deployment processes with our comprehensive DevOps solutions. CloudDogg understands the importance of efficiency and collaboration, and we empower you to optimize your software delivery lifecycle. Our experts assist in implementing robust pipelines that enable continuous integration, delivery, and deployment. With CloudDogg, you can achieve faster time-to-market and improved collaboration between your development and operations teams.</p>
 
 										</div>
 									</div>
@@ -364,10 +364,10 @@ Experience the benefits of a trusted and reliable cloud services provider. Conta
 
 											<span class="icon"><i class="icon ion-trophy"></i></span>
 
-											<h3>Design winner</h3>
+											<h3>Front End Frameworks, Mobile Devic Intergration</h3>
 
-											<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis cupidatat proident.</p>
-
+											<p>Craft stunning user experiences with the latest front-end frameworks. CloudDogg offers expertise in front-end technologies that enable you to build highly interactive and responsive web applications. Leverage our knowledge to select and implement the most suitable front-end framework for your unique requirements.</p>
+                                            <p>In today's mobile-driven world, CloudDogg recognizes the importance of seamless integration with mobile devices. Our solutions cater to tablets and other mobile platforms, ensuring your applications deliver exceptional user experiences across all devices. We assist in optimizing your AWS services to support mobile devices, allowing users to access your applications effortlessly and securely </p>
 										</div>
 									</div>
 
