Service Pages Update 2

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Experience the benefits of a trusted and reliable cloud services provider. Conta
 
 								<h2>Services</h2>
 
-								<p class="resume">We understand the challenges you face and strive to deliver tailored solutions that drive efficiency, scalability, and successExperience the benefits of a trusted and reliable cloud services provider. Contact CloudDogg today to embark on a transformative journey towards scalable, efficient, and innovative cloud solutions for your organization.</p>
+								<p class="resume">We understand the challenges you face and strive to deliver tailored solutions that drive efficiency, scalability, and success. Experience the benefits of a trusted and reliable cloud services provider. Contact CloudDogg today to embark on a transformative journey towards scalable, efficient, and innovative cloud solutions for your organization.</p>
 
 								<div class="row services">
 
