Service Pages Update 3

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Experience the benefits of a trusted and reliable cloud services provider. Conta
 
 								<h2>Services</h2>
 
-								<p class="resume">We understand the challenges you face and strive to deliver tailored solutions that drive efficiency, scalability, and success. Experience the benefits of a trusted and reliable cloud services provider. Contact CloudDogg today to embark on a transformative journey towards scalable, efficient, and innovative cloud solutions for your organization.</p>
+								<p class="resume">We understand the challenges you face and strive to deliver tailored solutions that drive efficiency, scalability, and success. gitExperience the benefits of a trusted and reliable cloud services provider. Contact CloudDogg today to embark on a transformative journey towards scalable, efficient, and innovative cloud solutions for your organization.</p>
 
 								<div class="row services">
 
@@ -367,6 +367,7 @@ Experience the benefits of a trusted and reliable cloud services provider. Conta
 											<h3>Front End Frameworks, Mobile Devic Intergration</h3>
 
 											<p>Craft stunning user experiences with the latest front-end frameworks. CloudDogg offers expertise in front-end technologies that enable you to build highly interactive and responsive web applications. Leverage our knowledge to select and implement the most suitable front-end framework for your unique requirements.</p>
+											
                                             <p>In today's mobile-driven world, CloudDogg recognizes the importance of seamless integration with mobile devices. Our solutions cater to tablets and other mobile platforms, ensuring your applications deliver exceptional user experiences across all devices. We assist in optimizing your AWS services to support mobile devices, allowing users to access your applications effortlessly and securely </p>
 										</div>
 									</div>
