--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
 											<span class="icon"><i class="icon ion-trophy"></i></span>
 
-											<h3>Design winner</h3>
+											<h3>Our Customers</h3>
 
 											<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis cupidatat proident.</p>
 
