--- a/index.html
+++ b/index.html
@@ -119,13 +119,9 @@
 
 											Our Commitment:At CloudDogg, we are passionate about helping businesses thrive in the ever-evolving digital landscape. Our team of experienced professionals is committed to providing top-notch services that cater to your specific needs. We understand the challenges you face and strive to deliver tailored solutions that drive efficiency, scalability, and success.
 
-<<<<<<< HEAD
 Our Commitment:At CloudDogg, we are passionate about helping businesses thrive in the ever-evolving digital landscape. Our team of experienced professionals is committed to providing top-notch services that cater to your specific needs. We understand the challenges you face and strive to deliver tailored solutions that drive efficiency, scalability, and success.
 
-Experience the benefits of a trusted and reliable cloud services provider. Contact CloudDogg today to embark on a transformative journey towards scalable, efficient, and innovative serverless cloud solutions for your organization.
-=======
-											Experience the benefits of a trusted and reliable cloud services provider. Contact CloudDogg today to embark on a transformative journey towards scalable, efficient, and innovative cloud solutions for your organization.
->>>>>>> 8df971c01a965e79ba6f2ae1407e9d72a0da345d
+Experience the benefits of a trusted and reliable cloud services provider.</p> Contact CloudDogg today to embark on a transformative journey towards scalable, efficient, and innovative serverless cloud solutions for your organization.
 										</p>
 
 									</div>
@@ -372,7 +368,7 @@ Experience the benefits of a trusted and reliable cloud services provider. Conta
 											<h3>Front End Frameworks, Mobile Devic Intergration</h3>
 
 											<p>Craft stunning user experiences with the latest front-end frameworks. CloudDogg offers expertise in front-end technologies that enable you to build highly interactive and responsive web applications. Leverage our knowledge to select and implement the most suitable front-end framework for your unique requirements.</p>
-											
+
                                             <p>In today's mobile-driven world, CloudDogg recognizes the importance of seamless integration with mobile devices. Our solutions cater to tablets and other mobile platforms, ensuring your applications deliver exceptional user experiences across all devices. We assist in optimizing your AWS services to support mobile devices, allowing users to access your applications effortlessly and securely </p>
 										</div>
 									</div>
