edit opacity on style-v1.css line 455

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="sl-slider">
 			
 				<!-- SLIDE 1 / Home -->
-				<div class="sl-slide bg-1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
+				<div class="sl-slide bg-1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="1" data-slice2-scale="1">
 					
 					<div class="sl-slide-inner">
 
@@ -473,15 +473,15 @@
 			
 			<!-- Arrow nav -->
 			<nav id="nav-arrows" class="nav-arrows">
-				<span class="nav-arrow-prev">Previous</span>
-				<span class="nav-arrow-next">Next</span>
+				<span class="nav-arrow-prev"></span>
+				<span class="nav-arrow-next"></span>
 			</nav>
 			<!-- END - Arrow nav -->
 
 			<!-- Bottom nav -->
 			<nav id="nav-multi-square" class="nav-multi-square nav-intro opacity-0">
 
-				<p class="copyright">© WAVE - Made for Creative People</p>
+				<p class="copyright">© CloudDogg - the progressive developers</p>
 
 				<span class="nav-square-current nav-square">
 					<span><i class="fa fa-home"></i>Home</span>
