Changed and renamed Services and copied Portfilo

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
 							<div class="container">
 
-								<h2>Our latest works</h2>
+								<h2>Our Services</h2>
 
 								<p class="resume">Showcase your work brillantly with this stunning gallery. Easy-to-use, you can add projects as much as you want. Fully responsive, your portfolio page is ideal to give the best feeling to your visitors and to catch their attention.</p>
 
