--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
     		<div class="row">
 
-    			<div class="col-xs-12 col-sm-6 col-lg-6 info-bar-left">
+    			<!-- <div class="col-xs-12 col-sm-6 col-lg-6 info-bar-left">
 
     				<p>Grand Opening in <span id="countdown"></span></p>
 
-    			</div>
+    			</div> -->
 
-    			<div class="col-xs-12 col-sm-6 col-lg-6 info-bar-right">
+    			<div class="col-xs-12 text-center">
 
     				<!-- Text or Icons, as you want :-) / Uncomment the part you need and comment or delete the other one -->
 
@@ -56,13 +56,13 @@
     					<a href="#" target="_blank">YOUTUBE</a>
     				</p> -->
 
-    				<p class="social-icon">
+    				<!-- <p class="social-icon">
     					<a href="#" target="_blank"><i class="fa fa-twitter"></i></a>
     					<a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
     					<a href="#" target="_blank"><i class="fa fa-youtube"></i></a>
     					<a href="#" target="_blank"><i class="fa fa-dribbble"></i></a>
     					<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-    				</p>
+    				</p> -->
 
     			</div>
     		</div>
