--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <!-- ================= Favicon ================== -->
         <!-- Standard -->
-        <link rel="shortcut icon" href="img/favicon.png">
+        <link rel="shortcut icon" sizes="16x16"href="img/favicon.ico">
         <!-- Retina iPad Touch Icon-->
         <link rel="apple-touch-icon" sizes="144x144" href="img/favicon-retina-ipad.png">
         <!-- Retina iPhone Touch Icon-->
@@ -81,7 +81,7 @@
 
 						<div class="content-slide">
 
-							<div class="container">
+							<div class="container"  data-dialog="somedialog">
 
 								<img src="img/CD_Logo.png" alt="" class="brand-logo text-intro opacity-0" />
 							
@@ -90,8 +90,6 @@
 								<p class="text-intro opacity-0">
 									 CloudDogg cloud development services can create model-based cloud solutions for businesses to provide greater flexibility, resilience, and availability and design personalized solutions that meet the customers' particular use cases. 
 								</p>
-
-								<a data-dialog="somedialog" class="action-btn trigger text-intro opacity-0">Learn More</a>
 
 							</div>
 						</div>
