updated services icon

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
 				</span>
 
 				<span class="nav-square">
-					<span><i class="fa fa-briefcase"></i>Our Tools</span>
+					<span><i class="fa fa-briefcase"></i>Our Services</span>
 				</span>
 
 				<span class="nav-square">
