--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 							<div class="container">
 
-								<h2>CloudDogg Offers</h2>
+								<h2>CloudDogg Service Offerings </h2>
 
 								<p class="resume">We provide a number of AWS service offerings to meet a variety of Use Cases</p>
 
@@ -392,7 +392,7 @@
 													7.	Designed the architecture in AWS that would support the displaying of data across the API.
 													8.	Integrated OpenSearch into a web application and created Lambda programs in Python function that would communicate with OpenSearch.
 													9.	Created the Web API Gateway that would absorb the information that was gathered from the OpenSearch and present that information on the web.
-													</p>
+												</p>
 
 					                        </div>
 
