Added image and edited index.html

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
 					                <!-- 1 / PICTURE -->
 					                <figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-					                    <a href="img/gallery-1.jpg" class="gallery-link small" data-image="img/gallery-1.jpg" itemprop="contentUrl" data-size="1920x1280">
+					                    <a href="img/openSerchSoution.jpg" class="gallery-link small" data-image="img/gallery-1.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-					                        <img src="img/gallery-1.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
+					                        <img src="img/openSerchSoution.jpg" itemprop="thumbnail" alt="OpenSearch Solution for EPA" class="img-responsive gallery-img small-square" />
 
 					                    </a>
 
@@ -344,7 +344,8 @@
 					                            <h4>The Eviromental Protection Agency<small> Architected and built OpenSearch engine the Enviormental Protection Agency advance search tool</small></h4>
 					                            <i class="icon ion-plus-circled"></i>
 
-					                            <p> 1.	Prepared an architecture for an OpenSearch solution for the Environmental Protection Agency to combine an array of search engines and it tested far superior to present search tools.
+					                            <p> 
+													1.	Prepared an architecture for an OpenSearch solution for the Environmental Protection Agency to combine an array of search engines and it tested far superior to present search tools.
 													2.	Encouraged security standards in the development process of projects.
 													3.	Monitored CloudWatch logs to investigate the security posture of the architecture in the development process.
 													4.	Provided architectural road map documentation for the use of new AWS technologies on the project. 
@@ -359,7 +360,7 @@
 													13.	Assigning IAM Roles to various AWS services for security, integration, and functionality.
 													14.	Prepared Cloud Formation Scripts to deploy infrastructure to redeploy work in other AWS accounts.
 													15.	Researched Infrastructure as Code strategies for completed architectures using Cloud Formation and Terraform
-													</p>
+												</p>
 
 					                        </div>
 
