--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
 					                <!-- 2 / PICTURE -->
 					                <figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-					                    <a href="img/gallery-2.jpg" class="gallery-link small" data-image="img/gallery-2.jpg" itemprop="contentUrl" data-size="1920x1280">
+					                    <a href="img/Quantum_AWS_ARCh.jpg" class="gallery-link small" data-image="img/gallery-2.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-					                        <img src="img/gallery-2.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
+					                        <img src="img/Quantum_AWS_ARCh.jpg" itemprop="thumbnail" alt="This is my work" class="img-responsive gallery-img small-square" />
 
 					                    </a>
 
