--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@
 											customers. Potential growth strategies include entering new markets, forging
 											partnerships with leading technology companies, and developing
 											industry-specific solutions to cater to diverse customer needs.</p>
-									</div>
-
+									</div>`
 								</div>
 							</div>
 						</div>
@@ -240,10 +239,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/Quantum_AWS_ARCh.jpg" class="gallery-link small"
+									<a href="img/cd_background2.jpg" class="gallery-link small"
 										data-image="img/gallery-2.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/Quantum_AWS_ARCh.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background2.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
@@ -269,10 +268,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/gallery-3.jpg" class="gallery-link small"
+									<a href="img/cd_background4.jpg" class="gallery-link small"
 										data-image="img/gallery-3.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/gallery-3.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background4.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
@@ -299,10 +298,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/gallery-4.jpg" class="gallery-link small"
+									<a href="img/cd_background3.jpg" class="gallery-link small"
 										data-image="img/gallery-4.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/gallery-4.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background3.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
@@ -327,10 +326,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/gallery-5.jpg" class="gallery-link small"
+									<a href="img/cd_background2.jpg" class="gallery-link small"
 										data-image="img/gallery-5.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/gallery-5.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background2.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
@@ -355,10 +354,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/gallery-6.jpg" class="gallery-link small"
+									<a href="img/cd_background1.jpg" class="gallery-link small"
 										data-image="img/gallery-6.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/gallery-6.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background1.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
