--- a/index.html
+++ b/index.html
@@ -409,10 +409,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/cd_backgound1.jpg" class="gallery-link small"
-										data-image="img/gallery-1.jpg" itemprop="contentUrl" data-size="1920x1280">
+									<a href="img/cd_background1.jpg" class="gallery-link small"
+										data-image="img/cd_background1.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/cd_backgound1.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background1.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
@@ -468,10 +468,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/gallery-2.jpg" class="gallery-link small"
+									<a href="img/cd_background5.jpg" class="gallery-link small"
 										data-image="img/gallery-2.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/gallery-2.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background5.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
@@ -516,10 +516,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/gallery-3.jpg" class="gallery-link small"
+									<a href="img/cd_background4.jpg" class="gallery-link small"
 										data-image="img/gallery-3.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/gallery-3.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background4.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
@@ -555,10 +555,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/gallery-4.jpg" class="gallery-link small"
+									<a href="img/cd_background3.jpg" class="gallery-link small"
 										data-image="img/gallery-4.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/gallery-4.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background3.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
@@ -592,10 +592,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/gallery-5.jpg" class="gallery-link small"
+									<a href="img/cd_background2.jpg" class="gallery-link small"
 										data-image="img/gallery-5.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/gallery-5.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background2.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
@@ -635,10 +635,10 @@
 								<figure class="col-xs-12 col-sm-12 col-md-6 col-lg-4 annex-img split-section"
 									itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
 
-									<a href="img/gallery-6.jpg" class="gallery-link small"
+									<a href="img/cd_background1.jpg" class="gallery-link small"
 										data-image="img/gallery-6.jpg" itemprop="contentUrl" data-size="1920x1280">
 
-										<img src="img/gallery-6.jpg" itemprop="thumbnail" alt="This is my work"
+										<img src="img/cd_background1.jpg" itemprop="thumbnail" alt="This is my work"
 											class="img-responsive gallery-img small-square" />
 
 									</a>
